--- a/web/pom.xml
+++ b/web/pom.xml
@@ -17,6 +17,19 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>club.yuit</groupId>
+            <artifactId>init-2</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
